# SFML-2.4.1_Android-Modern

./: .gitmodules  CMakeLists.txt  build.py
Android-Modern/: settings.gradle
Android-Modern/app/: build.gradle
Android-Modern/app/src/androidTest/java/com/piercelbrooks/sfml/android_modern/: ExampleInstrumentedTest.java
Android-Modern/app/src/main/: AndroidManifest.xml
Android-Modern/app/src/main/cpp/: native-lib.cpp
Android-Modern/app/src/main/java/com/piercelbrooks/sfml/android_modern/: MainActivity.java
Android-Modern/app/src/main/res/values/: strings.xml
Android-Modern/sfml/: build.gradle
Android-Modern/sfml/src/androidTest/java/com/piercelbrooks/sfml/: ExampleInstrumentedTest.java
Android-Modern/sfml/src/main/: AndroidManifest.xml
Android-Modern/sfml/src/main/java/com/piercelbrooks/sfml/: SFMLActivity.java
Android-Modern/sfml/src/main/res/values/: strings.xml
Android-Modern/sfml/src/test/java/com/piercelbrooks/sfml/: ExampleUnitTest.java
Android-Modern/testbed/: CMakeLists.txt  build.gradle
Android-Modern/testbed/src/main/: AndroidManifest.xml
Android-Modern/testbed/src/main/cpp/: native-lib.cpp
Android-Modern/testbed/src/main/res/layout/: activity_main.xml
Android-Modern/testbed/src/main/res/values/: strings.xml
SFML-2.4.1/src/SFML/Audio/: CMakeLists.txt
SFML3D/: CMakeLists.txt
SFML3D/cmake/: Config.cmake  Macros.cmake
SFML3D/cmake/Modules/: FindSFML.cmake  FindSFML3D.cmake
SFML3D/extlibs/headers/GL/: glu.h
SFML3D/include/SFML3D/: Audio.hpp  Config.hpp  Graphics.hpp  Main.hpp  Network.hpp  OpenGL.hpp  System.hpp  Window.hpp
SFML3D/include/SFML3D/Audio/: AlResource.hpp  Export.hpp  InputSoundFile.hpp  Listener.hpp  Music.hpp  OutputSoundFile.hpp  Sound.hpp  SoundBuffer.hpp  SoundBufferRecorder.hpp  SoundFileFactory.hpp  SoundFileFactory.inl  SoundFileReader.hpp  SoundFileWriter.hpp  SoundRecorder.hpp  SoundSource.hpp  SoundStream.hpp
SFML3D/include/SFML3D/System/: FileInputStream.hpp  MemoryInputStream.hpp  NativeActivity.hpp
SFML3D/include/SFML3D/Window/: Context.hpp  ContextSettings.hpp  Event.hpp  Export.hpp  GlResource.hpp  Joystick.hpp  Keyboard.hpp  Mouse.hpp  Sensor.hpp  Touch.hpp  VideoMode.hpp  Window.hpp  WindowHandle.hpp  WindowStyle.hpp
SFML3D/src/: CMakeLists.txt
SFML3D/src/SFML3D/: CMakeLists.txt
SFML3D/src/SFML3D/Audio/: ALCheck.cpp  ALCheck.hpp  AlResource.cpp  AudioDevice.cpp  AudioDevice.hpp  CMakeLists.txt  InputSoundFile.cpp  Listener.cpp  Music.cpp  OutputSoundFile.cpp  Sound.cpp  SoundBuffer.cpp  SoundBufferRecorder.cpp  SoundFileFactory.cpp  SoundFileReaderFlac.cpp  SoundFileReaderFlac.hpp  SoundFileReaderOgg.cpp  SoundFileReaderOgg.hpp  SoundFileReaderWav.cpp  SoundFileReaderWav.hpp  SoundFileWriterFlac.cpp  SoundFileWriterFlac.hpp  SoundFileWriterOgg.cpp  SoundFileWriterOgg.hpp  SoundFileWriterWav.cpp  SoundFileWriterWav.hpp  SoundRecorder.cpp  SoundSource.cpp  SoundStream.cpp  openal-soft
SFML3D/src/SFML3D/Graphics/: CMakeLists.txt  GLCheck.cpp  GLCheck.hpp  RenderTarget.cpp  Shader.cpp
SFML3D/src/SFML3D/Main/: CMakeLists.txt  MainAndroid.cpp  MainWin32.cpp  MainiOS.mm  SFMLActivity.cpp
SFML3D/src/SFML3D/Network/: CMakeLists.txt
SFML3D/src/SFML3D/System/: CMakeLists.txt  FileInputStream.cpp  MemoryInputStream.cpp
SFML3D/src/SFML3D/System/Android/: Activity.cpp  Activity.hpp  NativeActivity.cpp  ResourceStream.cpp  ResourceStream.hpp
SFML3D/src/SFML3D/System/Unix/: ThreadImpl.cpp
SFML3D/src/SFML3D/Window/: CMakeLists.txt  Context.cpp  EGLCheck.cpp  EGLCheck.hpp  EglContext.cpp  EglContext.hpp  GlContext.cpp  GlContext.hpp  GlResource.cpp  InputImpl.hpp  Joystick.cpp  JoystickImpl.hpp  JoystickManager.cpp  JoystickManager.hpp  Keyboard.cpp  Mouse.cpp  Sensor.cpp  SensorImpl.hpp  SensorManager.cpp  SensorManager.hpp  Touch.cpp  VideoMode.cpp  VideoModeImpl.hpp  Window.cpp  WindowImpl.cpp  WindowImpl.hpp
SFML3D/src/SFML3D/Window/Android/: InputImpl.cpp  InputImpl.hpp  JoystickImpl.cpp  JoystickImpl.hpp  SensorImpl.cpp  SensorImpl.hpp  VideoModeImpl.cpp  WindowImplAndroid.cpp  WindowImplAndroid.hpp
SFML3D/src/SFML3D/Window/FreeBSD/: JoystickImpl.cpp  JoystickImpl.hpp
SFML3D/src/SFML3D/Window/OSX/: AutoreleasePoolWrapper.h  AutoreleasePoolWrapper.mm  HIDInputManager.hpp  HIDInputManager.mm  HIDJoystickManager.cpp  HIDJoystickManager.hpp  InputImpl.hpp  InputImpl.mm  JoystickImpl.cpp  JoystickImpl.hpp  NSImage+raw.h  NSImage+raw.mm  SFApplication.h  SFApplication.m  SFApplicationDelegate.h  SFApplicationDelegate.m  SFContext.hpp  SFContext.mm  SFKeyboardModifiersHelper.h  SFKeyboardModifiersHelper.mm  SFOpenGLView+keyboard.mm  SFOpenGLView+keyboard_priv.h  SFOpenGLView+mouse.mm  SFOpenGLView+mouse_priv.h  SFOpenGLView.h  SFOpenGLView.mm  SFSilentResponder.h  SFSilentResponder.m  SFViewController.h  SFViewController.mm  SFWindow.h  SFWindow.m  SFWindowController.h  SFWindowController.mm  Scaling.h  SensorImpl.cpp  SensorImpl.hpp  VideoModeImpl.cpp  WindowImplCocoa.hpp  WindowImplCocoa.mm  (+5 more)
SFML3D/src/SFML3D/Window/Unix/: Display.cpp  Display.hpp  GlxContext.cpp  GlxContext.hpp  GlxExtensions.cpp  GlxExtensions.hpp  InputImpl.cpp  InputImpl.hpp  JoystickImpl.cpp  JoystickImpl.hpp  SensorImpl.hpp  VideoModeImpl.cpp  WindowImplX11.cpp  WindowImplX11.hpp
SFML3D/src/SFML3D/Window/Win32/: InputImpl.cpp  InputImpl.hpp  JoystickImpl.cpp  JoystickImpl.hpp  SensorImpl.hpp  VideoModeImpl.cpp  WglContext.cpp  WglContext.hpp  WglExtensions.cpp  WglExtensions.hpp  WindowImplWin32.cpp  WindowImplWin32.hpp
SFML3D/src/SFML3D/Window/iOS/: EaglContext.hpp  EaglContext.mm  InputImpl.hpp  InputImpl.mm  JoystickImpl.hpp  JoystickImpl.mm  ObjCType.hpp  SFAppDelegate.hpp  SFAppDelegate.mm  SFMain.hpp  SFMain.mm  SFView.hpp  SFView.mm  SFViewController.hpp  SFViewController.mm  SensorImpl.hpp  SensorImpl.mm  VideoModeImpl.mm  WindowImplUIKit.hpp  WindowImplUIKit.mm
SFML3D/tools/pkg-config/: sfml3d-all.pc.in  sfml3d-audio.pc.in  sfml3d-graphics.pc.in  sfml3d-network.pc.in  sfml3d-system.pc.in  sfml3d-window.pc.in
Trunk/src/: CMakeLists.txt  main.cpp  native-lib.cpp
(+4 files in other folders)
